Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Địa ốc Phát Đạt 'nắn dòng' kết quả kinh doanh 2024, cả doanh thu và lợi nhuận sụt giảm",
+    "content": "Công ty Cổ phần Phát triển Bất động sản Phát Đạt (PDR) đã điều chỉnh kế hoạch doanh thu và lợi nhuận cho năm 2024, với doanh thu giảm 1.200 tỉ đồng xuống còn 1.224 tỉ đồng và lợi nhuận giảm 367 tỉ đồng xuống 155 tỉ đồng. Việc điều chỉnh này nhằm duy trì sự ổn định tài chính và tối ưu hóa lợi ích cho cổ đông. Bên cạnh đó, công ty vẫn tiếp tục triển khai nhiều dự án bất động sản lớn và dự kiến ghi nhận thêm doanh thu từ hoạt động bán hàng trong năm tới.",
+    "link": "https://tuoitre.vn/dia-oc-phat-dat-nan-dong-ket-qua-kinh-doanh-2024-ca-doanh-thu-va-loi-nhuan-sut-giam-20250311215738525.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 6,
+    "question": "Địa ốc Phát Đạt đã điều chỉnh kế hoạch doanh thu và lợi nhuận năm 2024 như thế nào?",
+    "answers": [
+      {
+        "text": "Doanh thu giảm 1.200 tỉ đồng và lợi nhuận giảm 367 tỉ đồng.",
+        "correct": true
+      },
+      {
+        "text": "Doanh thu tăng 1.200 tỉ đồng và lợi nhuận tăng 367 tỉ đồng.",
+        "correct": false
+      },
+      {
+        "text": "Doanh thu không thay đổi và lợi nhuận giảm 200 tỉ đồng.",
+        "correct": false
+      },
+      {
+        "text": "Doanh thu giảm 500 tỉ đồng và lợi nhuận không thay đổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hà Nội sẽ di dời nhiều trụ sở cơ quan bên Hồ Gươm",
     "content": "UBND TP Hà Nội đã quyết định di dời nhiều trụ sở cơ quan như Sở Văn hóa Thể thao và Viện Văn học bên Hồ Gươm để xây dựng một khu quảng trường - công viên đặc biệt. Khu vực này sẽ mở rộng không gian công cộng, bao gồm khoảng 20.000 m2 và liên quan đến việc tái định cư cho nhiều hộ dân. Thành phố cũng sẽ nghiên cứu quy hoạch các công trình kiến trúc có giá trị trong khu vực và xây dựng cơ chế bồi thường cho các tổ chức, hộ gia đình bị ảnh hưởng.",
     "link": "https://vnexpress.net/ha-noi-se-di-doi-nhieu-tru-so-co-quan-ben-ho-guom-4860069.html",
@@ -1824,33 +1851,6 @@
     ]
   },
   {
-    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
-    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
-    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
-    "answers": [
-      {
-        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
-        "correct": true
-      },
-      {
-        "text": "Vì amidan không có chức năng miễn dịch.",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết lạnh làm amidan viêm.",
-        "correct": false
-      },
-      {
-        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
     "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
     "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
@@ -1873,6 +1873,33 @@
       },
       {
         "text": "Học sinh không phải thi nếu không muốn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
+    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
+    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
+    "answers": [
+      {
+        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
+        "correct": true
+      },
+      {
+        "text": "Vì amidan không có chức năng miễn dịch.",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết lạnh làm amidan viêm.",
+        "correct": false
+      },
+      {
+        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
         "correct": false
       }
     ]
@@ -4356,6 +4383,33 @@
     ]
   },
   {
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "8.500",
+        "correct": false
+      },
+      {
+        "text": "5.000",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cả nước dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
     "content": "Phó thủ tướng Nguyễn Hòa Bình cho biết cả nước dự kiến sẽ giảm số lượng đơn vị hành chính cấp xã từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc này dự kiến sẽ hoàn thành vào tháng 6 tới, với các tiêu chí sẽ được Trung ương ban hành để các địa phương lập phương án sắp xếp. Chất lượng cán bộ cấp xã cũng sẽ được nâng cao, nhằm tăng cường hiệu quả quản lý.",
     "link": "https://vnexpress.net/ca-nuoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
@@ -4387,33 +4441,6 @@
     ]
   },
   {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đề nghị truy tố 17 người trong chuyên án đất đai tại Bà Rịa - Vũng Tàu",
     "content": "Cơ quan cảnh sát điều tra - Công an tỉnh Bà Rịa - Vũng Tàu đã hoàn tất kết luận điều tra và đề nghị truy tố 17 bị can liên quan đến vụ án lừa đảo, làm giả giấy tờ đất đai. Trong số này, Nguyễn Văn Thanh bị đề nghị truy tố về 3 tội danh, bao gồm lừa đảo và làm giả con dấu. Vụ án liên quan đến việc làm giả giấy tờ để bán đất, gây thiệt hại cho nạn nhân hơn 170 tỷ đồng.",
     "link": "https://tuoitre.vn/de-nghi-truy-to-17-nguoi-trong-chuyen-an-dat-dai-tai-ba-ria-vung-tau-20250310215746541.htm",
@@ -4440,33 +4467,6 @@
       },
       {
         "text": "15 người",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toàn quốc cần xóa hơn 450 nhà tạm mỗi ngày",
-    "content": "Thủ tướng Chính phủ yêu cầu các địa phương cần xóa hơn 101.000 căn nhà tạm và dột nát trong năm nay, trung bình mỗi ngày cần hoàn thành 459 căn. Đến nay, cả nước đã hỗ trợ xây dựng 121.638 căn nhà, đạt hơn 54% mục tiêu. Tuy nhiên, một số địa phương vẫn chưa chủ động trong việc rà soát và hỗ trợ, dẫn đến chậm tiến độ. Thủ tướng nhấn mạnh cần thực hiện quyết liệt nhiệm vụ này và không để ai phải sống trong nhà tạm.",
-    "link": "https://vnexpress.net/toan-quoc-can-xoa-hon-450-nha-tam-moi-ngay-4859336.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Tại sao cần xóa hơn 450 nhà tạm mỗi ngày?",
-    "answers": [
-      {
-        "text": "Để hoàn thành mục tiêu xóa nhà tạm và dột nát trong năm nay.",
-        "correct": true
-      },
-      {
-        "text": "Để xây dựng thêm nhiều nhà mới cho người dân.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm thiểu tình trạng nghèo đói ở các địa phương.",
-        "correct": false
-      },
-      {
-        "text": "Để cải thiện tình hình kinh tế của đất nước.",
         "correct": false
       }
     ]
