Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,33 @@
     ]
   },
   {
+    "title": "Hai nam sinh tử vong sau va chạm với ôtô đầu kéo",
+    "content": "Vào tối ngày 11/3, hai nam sinh 15 tuổi ở huyện Hương Khê, Hà Tĩnh, đã tử vong sau khi va chạm với ôtô đầu kéo trên đường Hồ Chí Minh. Hai em Bùi Kiều Hoàng Anh và Nguyễn Gia Hưng đã điều khiển xe máy chở nhau thì xảy ra tai nạn với ôtô đầu kéo đang chạy ngược chiều. Cả hai nam sinh đều tử vong tại chỗ sau vụ va chạm.",
+    "link": "https://vnexpress.net/hai-nam-sinh-tu-vong-sau-va-cham-voi-oto-dau-keo-4860085.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 9,
+    "question": "Hai nam sinh nào đã tử vong sau va chạm với ôtô đầu kéo?",
+    "answers": [
+      {
+        "text": "Bùi Kiều Hoàng Anh và Nguyễn Gia Hưng",
+        "correct": true
+      },
+      {
+        "text": "Nguyễn Văn A và Trần Thị B",
+        "correct": false
+      },
+      {
+        "text": "Lê Văn C và Phạm Thị D",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Văn E và Hoàng Thị F",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Địa ốc Phát Đạt 'nắn dòng' kết quả kinh doanh 2024, cả doanh thu và lợi nhuận sụt giảm",
     "content": "Công ty Cổ phần Phát triển Bất động sản Phát Đạt (PDR) đã điều chỉnh kế hoạch doanh thu và lợi nhuận cho năm 2024, với doanh thu giảm 1.200 tỉ đồng xuống còn 1.224 tỉ đồng và lợi nhuận giảm 367 tỉ đồng xuống 155 tỉ đồng. Việc điều chỉnh này nhằm duy trì sự ổn định tài chính và tối ưu hóa lợi ích cho cổ đông. Bên cạnh đó, công ty vẫn tiếp tục triển khai nhiều dự án bất động sản lớn và dự kiến ghi nhận thêm doanh thu từ hoạt động bán hàng trong năm tới.",
     "link": "https://tuoitre.vn/dia-oc-phat-dat-nan-dong-ket-qua-kinh-doanh-2024-ca-doanh-thu-va-loi-nhuan-sut-giam-20250311215738525.htm",
@@ -2040,33 +2067,6 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
-        "correct": true
-      },
-      {
-        "text": "Tăng huyết áp nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra tình trạng thừa cân.",
-        "correct": false
-      },
-      {
-        "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
     "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
     "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
@@ -2116,6 +2116,33 @@
       },
       {
         "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Gây ra tình trạng thừa cân.",
+        "correct": false
+      },
+      {
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
