Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Man Utd xây SVĐ mới 100.000 chỗ thay Old Trafford",
+    "content": "Man Utd đã công bố kế hoạch xây dựng một sân vận động mới có sức chứa 100.000 chỗ ngồi, thay thế cho Old Trafford, sân nhà hiện tại của họ. Kế hoạch này được sự ủng hộ của cựu HLV Alex Ferguson và dự kiến sẽ mất 5 năm để hoàn thành. Sân mới, mang tên 'New Trafford', sẽ được thiết kế hiện đại và có các tính năng như thu thập năng lượng mặt trời. Việc chuyển đến sân mới nhằm đáp ứng nhu cầu hiện đại hóa cơ sở vật chất và tạo ra trải nghiệm tốt hơn cho người hâm mộ.",
+    "link": "https://vnexpress.net/man-utd-xay-svd-moi-100-000-cho-thay-old-trafford-4860097.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 10,
+    "question": "Man Utd có kế hoạch xây sân vận động mới nào?",
+    "answers": [
+      {
+        "text": "Sân vận động mới 100.000 chỗ ngồi",
+        "correct": true
+      },
+      {
+        "text": "Sân vận động cũ 76.000 chỗ ngồi",
+        "correct": false
+      },
+      {
+        "text": "Sân vận động chỉ 50.000 chỗ ngồi",
+        "correct": false
+      },
+      {
+        "text": "Sân vận động chỉ dành cho bóng đá nữ",
+        "correct": false
+      },
+      {
+        "text": "Sân vận động ở London",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Máu nhân tạo - tiềm năng tương lai",
     "content": "Các nhà khoa học tại Anh và Nhật Bản đang phát triển công nghệ máu nhân tạo để giải quyết tình trạng thiếu máu và nhu cầu truyền máu an toàn. Máu nhân tạo bao gồm máu nuôi cấy trong phòng thí nghiệm và máu tổng hợp, với khả năng thay thế cho các nhóm máu hiếm. Mặc dù còn nhiều thách thức trong việc sản xuất và phê duyệt, nghiên cứu này hứa hẹn sẽ có những bước tiến quan trọng trong y học và cứu sống nhiều bệnh nhân.",
     "link": "https://vnexpress.net/mau-nhan-tao-tiem-nang-tuong-lai-4859869.html",
@@ -2148,28 +2179,28 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 7,
     "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
     "answers": [
       {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "text": "Có, nhưng không phải tất cả trường hợp.",
         "correct": true
       },
       {
-        "text": "Tăng huyết áp nhanh chóng.",
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
         "correct": false
       },
       {
-        "text": "Gây ra tình trạng thừa cân.",
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
         "correct": false
       },
       {
-        "text": "Làm yếu hệ miễn dịch.",
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -2202,28 +2233,28 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 9,
     "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
     "answers": [
       {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
         "correct": true
       },
       {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "text": "Tăng huyết áp nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "text": "Gây ra tình trạng thừa cân.",
         "correct": false
       },
       {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
